--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <body>
        <h1>The Biggest Title</h1> 
        <p>
+        Since we have finished our work, we are ready move from stage to commit for our repo. Adding commits keep track of our progress and changes as we work. Git considers each commit change point or "save point". It is a point in the project you can go back to if you find a bug, or want to make a change.
+       </p>
+       <p>
         Lorem ipsum <b>dolor</b> sit <i>amet</i>, consectetur <u>adipiscing</u> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
         <br> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  
        </p>
