Add paragraph with 300 symbols

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <body>
        <h1>The Biggest Title</h1> 
        <p>
+        From my hotel room window, I see an oversized billboard with his face on it: Jason, the Great Magician.I absent-mindedly turn the pages of the phone book but come across a city map. Sipping my iced latté, I run my fingers along the streets from the hotel to the opera hall. Not more than a half-hour walk.I glance at the clock. The show starts in one hour. Plenty of time.
+     </p>
+       <p>
         Lorem ipsum <b>dolor</b> sit <i>amet</i>, consectetur <u>adipiscing</u> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
         <br> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  
        </p>
